markup/static/stylus/common.styl
// Width map.
$palmtopWidth = 1024px
$phoneWidth = 768px
$smallPhoneWidth = 320px

// Color map.
$colorRed = #EB0029
$colorTextGrey = #262626
$bodyBg = #ffffff

html
body
  @media only screen and (max-width: $palmtopWidth)
      height 110%
      overflow-y: auto
      -webkit-overflow-scrolling: touch;

body
  background: $bodyBg

.l-restrictor
  box-sizing border-box
  margin 0 auto
  max-width 1440px

.emphasis
  font-family: $AvenirRegular

html.mob-menu-active
  overflow: hidden

  .l-section_overlay
    z-index: 998
    opacity: 1

  body
    overflow: hidden

.fp-tableCell {
  vertical-align: top !important;
}

#c-slider-wrapper:before
  content: ''
  background: rgba(0,0,0,0);
  position: absolute
  transition: background 300ms linear;
  display: none;
  left: 0
  right: 0
  top: 0
  bottom: 0
  z-index: 9
  animation: fadeOut 300ms 1 forwards;

.mob-menu-active #c-slider-wrapper:before
  animation: fadeIn 300ms 1 forwards;
  display: block;



@keyframes fadeOut
  from
    background: rgba(0,0,0,.5);
  to
    background: rgba(0,0,0,0);

@keyframes fadeIn
  from
    background: rgba(0,0,0,0);
  to
    background: rgba(0,0,0,.5);

